[package]
name = "superkeyloader"
version = "0.1.0"
authors = ["Alessandro Biondi (biosan) <alessandro@biondi.me>"]
edition = "2018"
license = "MIT"
description = "A small utility to copy all your GitHub SSH public keys on your system."
readme = "README.md"
homepage = "https://github.com/biosan/superkeyloader"
repository = "https://github.com/biosan/superkeyloader"
keywords = ["cli", "ssh", "github", "ssh-keys", "utility", "tool"]
categories = ["command-line-utilities"]
exclude = ["ci/**/*", "doc/**/*", ".**/*"]

[badges]
coveralls = { repository = "biosan/superkeyloader" }
maintenance = { status = "actively-developed" }

[lib]
name = "superkeyloader_lib"
path = "src/lib.rs"

[[bin]]
name = "superkeyloader"
path = "src/main.rs"

[dependencies]
atty = "0.2"
clap-verbosity-flag = "0.3.1"
exitfailure = "0.5.1"
failure = "0.1.5"
human-panic = "1.0.1"
log = "0.4.8"
maplit = "1.0.2"
pretty_env_logger = "0.4.0"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
shellexpand = "2.0.0"
structopt = "0.3"
ureq = { version = "*", features = ["json"] }

[dev-dependencies]
assert_cmd = "0.12"
mockito = "0.23.3"
predicates = "1"
rand = "0.7"
rusty-hook = "0.10"
tempfile = "3.1"

